Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,24 +1,24 @@
 # Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 # REQUIRED CONFIG
 BOT_TOKEN = ""
 GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+OWNER_ID = 1669772418
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 6682330
+TELEGRAM_HASH = "a1c264a07c3d7e1eedc83c746a4a9777"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
+AUTHORIZED_CHATS = "-1001523303763"
+SUDO_USERS = "821674354"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
 STATUS_LIMIT = ""
-STOP_DUPLICATE = ""
+STOP_DUPLICATE = "True"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
@@ -29,9 +29,9 @@ UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
 # Leech
 TG_SPLIT_SIZE = ""
-AS_DOCUMENT = ""
+AS_DOCUMENT = "True"
 EQUAL_SPLITS = ""
-CUSTOM_FILENAME = ""
+CUSTOM_FILENAME = "@anjumani_zone"
 # qBittorrent
 BASE_URL_OF_BOT = ""
 SERVER_PORT = ""
@@ -56,7 +56,7 @@ MEGA_PASSWORD = ""
 SHORTENER = ""
 SHORTENER_API = ""
 # GDTOT COOKIE
-CRYPT = ""
+CRYPT = "WjgyaTVaZjVpd0JMMDRiQTYyUk55bHd4THhwV1dXVVhuRDVRUTlzMXUzbz0%3D"
 # Size Limits
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
@@ -64,7 +64,7 @@ CLONE_LIMIT = ""
 MEGA_LIMIT = ""
 STORAGE_THRESHOLD = ""
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "True"
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
