--- a/config.env
+++ b/config.env
@@ -33,7 +33,7 @@ AS_DOCUMENT = "True"
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = "@anjumani_zone"
 # qBittorrent
-BASE_URL_OF_BOT = ""
+BASE_URL_OF_BOT = "https://minorsufs.herokuapp.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
