--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 # Remove this line before deploying
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
+BOT_TOKEN = "5063216755:AAELqoRegmaVFYYjYErjc3s-6_kLV2wRGUs"
+GDRIVE_FOLDER_ID = "15RhI6OxPhifeW9m8fCIXxiBOrlhfMqWn"
 OWNER_ID = 1669772418
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
@@ -16,7 +16,7 @@ AUTHORIZED_CHATS = "-1001523303763"
 SUDO_USERS = "821674354"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+INDEX_URL = "https://anjumani.tanujairam.workers.dev/0:/Anjumani%20mirror%20bot/"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = "True"
 CMD_INDEX = ""
